test/cherry/Driver/driver-mlir-jit.cherry
# RUN: not cherry-driver %s -dump=mlir-llvm 2>&1 | FileCheck %s

fn bar(x: UInt64, y: Bool): Bool {
  var k: Bool = y;
  
  k = if k {
    print(18446744073709551615);
    false
  } else {
    print(1);
    true
  };

  var unit: () = while k {
    k = false;
    ()
  };

  k
}

fn baz(): () {
  ()
}

fn main(): UInt64 {
  0 % 3 * 8 / 4 + 3 - 1;
  3 lt 1; 3 le 1; 3 gt 1; 3 ge 1;
  true and false or true eq false neq true;

  var boolValue: Bool = bar(18446744073709551615, false);
  print(boolToUInt64(boolValue));
  baz();
  0
}

# CHECK: error: LLVM lowering is temporarily disabled while Mulberry lowering is redesigned
